--- a/snake/styles.css
+++ b/snake/styles.css
@@ -1,37 +1,75 @@
+html,
 body {
-    background: url('https://images.unsplash.com/photo-1570876050997-2fdefb00c004?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-    background-size: cover; /* Cover the entire background */
-    background-position: center; /* Center the background image */
-    color: white;
-    margin: 0;
-    text-align: center;
-    margin-top: 50px;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-.game-frame {
-    position: relative;
-    width: 900px;
-    height: 600px;
-    border: 4px solid white;
-    box-sizing: border-box;
-    padding: 20px;
-    margin: 0 auto;
-    opacity: 0.7;
+body {
+  background: radial-gradient(
+    ellipse at center,
+    rgba(255, 254, 234, 1) 0%,
+    rgba(255, 254, 234, 1) 35%,
+    #b7e8eb 100%
+  );
+  overflow: hidden;
+  font-family: Helvetica, Arial, sans-serif;
+  text-align: center;
+  position: relative;
 }
 
-.player {
-    position: absolute;
-    top: 50%; /* Initially center vertically */
-    left: 50%; /* Initially center horizontally */
-    transform: translate(-50%, -50%); /* Center the player element */
-    width: 10px;
-    height: 10px;
-    background-color: white;
+.ocean {
+  height: 5%;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: #015871;
+  z-index: 1;
 }
 
-.food{
-    position:absolute;
-    width:10px;
-    height:10px;
-    background-color:red;
+.wave {
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/85486/wave.svg) repeat-x;
+  position: absolute;
+  top: -198px;
+  width: 200%;
+  height: 198px;
+  animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
+  transform: translate3d(0, 0, 0);
+  z-index: 2;
+}
+
+.wave:nth-of-type(2) {
+  top: -175px;
+  animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) -0.125s infinite,
+    swell 7s ease -1.25s infinite;
+  opacity: 1;
+}
+
+@keyframes wave {
+  0% {
+    margin-left: 0;
+  }
+  100% {
+    margin-left: -800px;
+  }
+}
+
+@keyframes swell {
+  0%,
+  100% {
+    transform: translate3d(0, -25px, 0);
+  }
+  50% {
+    transform: translate3d(0, 5px, 0);
+  }
+}
+
+canvas {
+  border: 2px solid rgb(151, 149, 149);
+  display: block;
+  margin: 20px auto;
+  z-index: 3;
+  position: relative;
+  opacity: 0.5;
 }
