--- a/style.css
+++ b/style.css
@@ -1,214 +1,255 @@
-* {
-  margin: 0;
-  box-sizing: border-box;
-}
+@import url('https://fonts.googleapis.com/css?family=Comfortaa|Kaushan+Script|Oswald&display=swap');
 
 :root {
-  font-size: 13px;
-  font-family: "Source Sans Pro", sans-serif;
-  line-height: 1.618;
-  font-weight: 400;
+  --primary-color: rgb(255, 92, 92);
+  --primary-variant: #ff2d2d;
+  --secondary-color: #1b9999;
+  --on-primary: rgb(250, 250, 250);
+  --on-background: rgb(66, 66, 66);
+  --on-background-alt: rgba(66, 66, 66, 0.7);
+  --background: rgb(255, 255, 255);
+  --box-shadow: 0 5px 20px 1px rgba(0, 0, 0, 0.5);
+}
+
+[data-theme="dark"] {
+  --primary-color: rgb(150, 65, 255);
+  --primary-variant: #6c63ff;
+  --secondary-color: #03dac5;
+  --on-primary: #000;
+  --on-background: rgba(255, 255, 255, 0.9);
+  --on-background-alt: rgba(255, 255, 255, 0.7);
+  --background: #121212;
+}
+
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
-  background: url('/img/black .avif');
-  background-size: cover; /* Cover the entire background */
-  background-position: center; /* Center the background image */
-  color: #f5f5f5;
+  margin: 0;
+  color: var(--on-background);
+  font-family: Comfortaa, sans-serif;
+  background-color: var(--background);
+  background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%233ca5bb' fill-opacity='0.29' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 
-a {
-  color: #a5a8a6;
-}
-
-a:hover {
-  opacity: 0.8;
-}
-
-p {
-  font-size: 1.2rem;
-  color: white;
-}
-
-.small {
-  font-size: 1rem;
-  margin-top: 1em;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 4rem 2rem;
-}
-
-header {
-  text-align: center;
-  padding-bottom: 3rem;
+section {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 h1 {
-  font-size: 3.6rem;
-  line-height: 1.2em;
-  padding-bottom: 1rem;
-  font-weight: 600;
+  font-family: Kaushan Script, sans-serif;
+  font-size: 100px;
+  margin-bottom: 0;
 }
 
-svg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+h2 {
+  font-size: 32px;
+  font-weight: normal;
+  color: var(--on-background-alt);
 }
 
-circle {
-  transform-origin: 50% 50%;
-  transform: scale(0);
-  transition: transform 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+/* Navigation */
+nav {
+  z-index: 10;
+  position: fixed;
+  font-family: Oswald, sans-serif;
+  font-size: 24px;
+  letter-spacing: 3px;
+  padding: 25px;
+  width: 100vw;
+  background: rgb(255 255 255 / 50%);
 }
 
-text {
-  font-size: 1.1rem;
-  text-transform: uppercase;
-  text-anchor: middle;
-  letter-spacing: 1px;
-  font-weight: 600;
+a {
+  margin-right: 25px;
+  color: var(--primary-color);
+  text-decoration: none;
+  border-bottom: 3px solid transparent;
+  font-weight: bold;
 }
 
-.svg-text {
-  fill: #545a64;
+a:hover,
+a:focus {
+  color: var(--on-background);
+  border-bottom: 3px solid;
 }
 
-.svg-masked-text {
-  fill: white;
+/* Home Section */
+.title-group {
+  text-align: center;
 }
 
-image {
-  transform: scale(1.1);
-  transform-origin: 50% 50%;
-  transition: transform 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+/* About Section */
+.text-box {
+  width: 40%;
+  text-align: justify;
+  background: rgb(0 0 0 / 50%);
+  color: var(--on-primary);
+  border-radius: 10px;
+  padding: 30px;
 }
 
-.items {
+p {
+  margin: 0;
+  line-height: 25px;
+}
+
+/* Projects Section */
+.about-container {
   display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
+  flex-wrap: wrap; /* Allow items to wrap */
+  gap: 50px; /* Space between cards */
+  justify-content: center; /* Center cards horizontally */
 }
 
-.item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  overflow: hidden;
-  width: 300px;
+.image-container {
+  border: 1px solid var(--secondary-color);
+  border-radius: 10px;
+  padding: 20px;
+  width: 300px; /* Adjusted width for smaller cards */
+  background: var(--background);
+  box-shadow: var(--box-shadow);
+  box-sizing: border-box;
+  text-align: center;
+  margin: 20px; /* Added margin for spacing */
+}
+
+img {
   height: 200px;
-  margin: 5px;
-  cursor: pointer;
-  background-color: #3b3e46;
-  border-radius: 2px;
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.02), inset 0 0px 0px 1px rgba(0, 0, 0, 0.07);
-  transform: translateZ(0);
+  width: auto; /* Maintain aspect ratio */
 }
 
-.item:hover circle,
-.item:hover image {
-  transform: scale(1);
+
+/* Buttons */
+.buttons {
+  margin-top: 15px;
+  margin-bottom: 50px;
 }
 
 button {
-  width: 12px;
-  height: 12px;
-  border: none;
-  appearance: none;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5);
-  border-radius: 1px;
+  min-width: 100px;
+  height: 40px;
+  cursor: pointer;
+  border-radius: 10px;
+  margin-right: 10px;
+  border: 2px solid var(--primary-color);
+  font-size: 15px;
+  outline: none;
 }
 
-button.dark {
-  background-color: #2f3238;
+button:disabled {
+  opacity: 0.4;
+  cursor: default;
 }
 
-button.light {
-  background-color: #D6DAC8;
+button:hover:not(.outline) {
+  filter: brightness(110%);
 }
 
-.options {
+.primary {
+  background: var(--primary-color);
+  color: var(--on-primary);
+}
+
+.secondary {
+  border: 2px solid var(--secondary-color);
+}
+
+.secondary,
+.secondary:hover,
+.outline.secondary:hover {
+  background: var(--secondary-color);
+  color: var(--on-primary);
+}
+
+.outline {
+  background: var(--background);
+  color: var(--on-background);
+}
+
+.outline:hover {
+  background: var(--primary-color);
+  color: var(--on-primary);
+}
+
+/* Dark Mode Toggle */
+.theme-switch-wrapper {
+  display: flex;
+  align-items: center;
+  z-index: 100;
+  position: fixed;
+  right: 25px;
+  top: 30px;
+}
+
+.theme-switch-wrapper span {
+  margin-right: 10px;
+  font-size: 1rem;
+}
+
+.toggle-text {
+  position: relative;
+  top: -4px;
+  right: 5px;
+  color: var(--on-background);
+}
+
+.theme-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+}
+
+.theme-switch input {
+  display: none;
+}
+
+.slider {
+  background: #ccc;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
   position: absolute;
-  top: 1rem;
-  right: 1rem;
+  right: 0;
+  top: 0;
+  transition: 0.4s;
 }
 
-.options button {
-  margin-left: 0.5rem;
+.slider::before {
+  background: #fff;
+  bottom: 4px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: 0.4s;
+  width: 26px;
 }
 
-.light {
-  background-color: #D6DAC8;
-  color: #1a1a1a;
+input:checked + .slider {
+  background: var(--primary-color);
 }
 
-.light p {
-  color: black;
+input:checked + .slider::before {
+  transform: translateX(26px);
 }
 
-.light .item {
-  background: #FBF3D5;
+.slider.round {
+  border-radius: 34px;
 }
 
-.light .svg-text {
-  fill: black;
+.slider.round::before {
+  border-radius: 50%;
 }
 
-body.light {
-  background : url("https://img.freepik.com/free-vector/seamless-white-round-geometric-patterned-background-design-resource-vector_53876-143404.jpg?t=st=1719594974~exp=1719598574~hmac=cab97a06e4695fc8f12de071585e40354ee9ed0c207e777479eb2886aaeca3d3&w=1800");
-  background-size: cover; /* Cover the entire background */
-  background-position: center; /* Center the background image */
-}
-
-footer {
-  padding: 4rem 0 2em;
-  width: calc(min(87.5rem, 90%));
-  margin: 0 auto;
-
-  p {
-    margin-right: 1em;
-  }
-
-  ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-    align-items: center;
-    gap: 1em;
-
-    a {
-      text-transform: capitalize;
-      color: #333;
-
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-  }
-
-  div {
-    flex-wrap: wrap;
-    position: relative;
-
-    &::before {
-      position: absolute;
-      content: "";
-      top: -1.875rem;
-      left: 0;
-      width: 100%;
-      height: 0.063rem;
-      background: #ddd;
-      display: block;
-    }
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+.fas {
+  font-size: 30px;
+  margin-right: 5px;
 }
